// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h3>
    You are viewimg 
    1
     
    expense
     whose total amount is 
    $2.35
  </h3>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div>
  <h3>
    You are viewimg 
    23
     
    expenses
     whose total amount is 
    $2,354,689,866.70
  </h3>
</div>
`;
